tests/fail/BitXor.java
package fail;

import java.lang.System;

public class BitXor {

  public static void main(String[] args ) {
    7^"Hello";
  }

}
